# College_Recommendation

./: main.py  pyproject.toml
app/: embed_todb.py  recommendation_helper.py
app/keys/: secret_key.py
app/schema/: schema.py
app/scraper/: college_scrape.py  embed_db.py  program_scrape.py
app/util/: database.py
dataset/: colleges.csv  embedded_colleges.json  embedded_programs.json  programs.csv
notebooks/: 01_data_cleaning.ipynb  02_embedding.ipynb  chatbot_college_recommendation.ipynb  cleaned_programs.csv  secret_key.py
