[project]
name = "kathmandu-college-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cookies>=2.2.1",
    "docarray>=0.41.0",
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.0.10",
    "pandas>=2.3.2",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "uvicorn>=0.35.0",
]
